# virtual_keyboard_daemon

./: .gitignore  IPC_protocal.txt  cli.docopt  headers.txt  key_reader.c  keycode.h  keycode_windows.h  linux key defines.txt  meson.build  program design.txt  readme.md  shared_defines.c  todo.txt  virtual_keyboard.h  vkeyd.service  vkeyd.socket  windows key defines.c  windows_test.c
include/: channel.h  cli_cmds.h  client_options.h  commands.h  daemon_options.h  daemonize.h  keycode.h  message.h  parse_option.h  virtual_keyboard.h
include/linux/: keycode_linux.h
include/windows/: keycode_windows.h
scripts/: create_comp_time_trie.py
src/: channel.c  client.c  client_options.c  commands.c  daemon.c  daemon_options.c  keycodeFromStr.c  keycode_from_str.c  linux_test.c  main.c  message.c  parse_option.c
src/linux/: channel.c  daemonize.c  keycode.c  virtual_keyboard.c
src/vkeytool/: key_reader.c  print_keys.c  vkeytool.c
src/vkeytool/windows.c/: key_reader.c
src/windows/: channel.c  keycode.c  virtual_keyboard.c
